# pysystemtrade_preprocessing

./: .gitignore  Makefile  README.md  config.json  grayfox.code-workspace  main.py  pyproject.toml  tradable_instruments.csv
data/fx_prices/: fx_prices_1.csv
data/instrumentconfig/: instrumentconfig_1.csv
data/roll_calendars_csv/: roll_calendars_csv_1.csv
data/rollconfig/: rollconfig_1.csv
data/rules/: rules.csv
data/spreadcosts/: spreadcosts_1.csv
data/tradable_instruments/: tradable_instruments_1.csv
src/: csv_generator.py  main.py
src/csvconfig/: csvconfig_generator.py  instrument_metadata_generator.py  instrumentconfig_generator.py  roll_config_generator.py  spred_cost_generator.py  spred_costs_generator.py
src/dir_structure/: dir_structure_generator.py
src/pysystemtrade_preproccessing/: configs.py  main.py
src/pysystemtrade_preproccessing/csv_utils/: csv_generator.py
src/pysystemtrade_preproccessing/csvconfig/: csvconfig_generator.py  instrument_metadata_generator.py  instrumentconfig_generator.py  roll_config_generator.py  spred_costs_generator.py
src/pysystemtrade_preproccessing/data_loading/: data_loader.py
src/pysystemtrade_preproccessing/downloader/: downloader.py
src/pysystemtrade_preproccessing/models/: configs.py  git_reposnse.py  raw_data.py
src/pysystemtrade_preproccessing/raw_data/: adjusted_prices_generator.py  configs_generator.py  daily_data_generator.py  data_processor.py  fx_prices_generator.py  instrumentconfig_generator.py  multiple_prices_generator.py  raw_data_generator.py  roll_calendars_generator.py  utils.py
src/pysystemtrade_preproccessing/tradable_insturments/: tradable_instruments_generator.py
src/pysystemtrade_preproccessing/utils/: utils.py
src/raw_data/: adjusted_prices_generator.py  fx_prices_generator.py  multiple_prices_generator.py  roll_calendars_generator.py  utils.py
src/tradable_insturments/: tradable_instruments_generator.py
